classDiagram
    class ComponentComposer {
        - _getComponentCode()
        + fromComponentContract()
        - _build1004()
        - _build1005()
        - _build1006()
        - _build1008()
        - _build1009()
        - _build1012()
        - _build1014()
        - _build1013()
        - _build1016()
    }
    class EIC1004
    class ActionNeuButton
    class NameTextField
    class EIC1013
    class OtherWidgets

    ComponentComposer --> EIC1004
    ComponentComposer --> ActionNeuButton
    ComponentComposer --> NameTextField
    ComponentComposer --> EIC1013
    ComponentComposer --> OtherWidgets
